[package]
name = "googleapis"
version = "0.1.0"
authors = ["Dongdong Zhou <dz@yay.com>"]
edition = "2018"

[dependencies]
tonic = "0.4.0"
prost = "0.7.0"
tokio = { version = "1.0.1", features = ["full"]}
base64 = "0.13.0"
http = "0.2.1"
reqwest = { version = "0.10.9", features = ["json", "blocking"] }
anyhow = "1.0.30"
thiserror = "1.0.17"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
tera = "1"

[build-dependencies]
tonic-build = "0.4.0"