[package]
name = "nebula_log"
version = "0.1.0"
authors = ["Dongdong Zhou <dz@yay.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
yup-oauth2 = "5.0.1"
reqwest = "0.11.0"
tokio = { version = "1.26.0", features = ["full"]}
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.59"
crossbeam-channel = "0.5.0"
chrono = "0.4.19"
fern = "0.6.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "registry"] }
nebula_utils = {path = "../utils"}
