[package]
name = "nebula_media"
version = "0.1.0"
authors = ["Dongdong Zhou <dz@yay.com>"]
edition = "2018"

[dependencies]
tracing = "0.1.40"
reqwest = "0.11.14"
rubato = "0.10.0"
webrtc-util = "0.5.0"
rtcp = "0.5.0"
rtp = "0.6.5"
nnnoiseless = "0.3.2"
uuid = { version = "0.8.1", features = ["v4", "v5"] }
priority-queue = "1.1.1"
ahash = "0.8.7"
dashmap = "5.5.3"
scc = "2.3.3"
indexmap = "1.6.2"
fern = "0.6.0"
chrono = "0.4.19"
parking_lot = "0.11.1"
pin-project = "1.0"
async-stream = "0.3"
async-channel = "1.5.1"
async-recursion = "0.3.1"
bytecodec = "0.4.13"
stun_codec = "0.3.5"
toml = "0.5.7"
lazy_static = "1.4.0"
openssl = "0.10.32"
openssl-sys = "0.9.60"
subtle = "2.3.0"
hmac = "0.10.1"
sha-1 = "0.9.2"
aes-ctr = "0.6.0"
thiserror = "1.0.22"
anyhow = "1.0.34"
scopeguard = "1.1.0"
bytes = "1.1.0"
strum = "0.20.0"
strum_macros = "0.20.1"
mio = "0.7.6"
tokio-timerfd = "0.2.0"
tokio = { version = "1.26.0", features = ["full"]}
futures-core = "0.3.8"
futures = "0.3.8"
nix = "0.19.1"
serde = { version = "1.0.117", features = ["derive"] }
rand_distr = "0.4.1"
rand = "0.8"
serde_json = "1.0.59"
crossbeam-channel = "0.5.0"
libc = "0.2.80"
axum = "0.4.3"
byteorder = "1.3.4"
base64 = "0.13.0"
async-timer = "0.7.4"
ffmpeg-next = "7.1.0"
lame = { path = "../lame" }
nebula_timer = {path = "../timer"}
nebula_rpc = {path = "../rpc"}
nebula_redis = {path = "../redis"}
nebula_utils = {path = "../utils"}
nebula_db = {path = "../db"}
nebula_task = {path = "../task"}
texttospeechv1 = {path = "../googleapis/texttospeechv1"}
storagev1 = {path = "../googleapis/storagev1"}
codec = { path = "../codec"}
sdp = { path = "../sdp"}