[package]
name = "nebula_redis"
version = "0.1.0"
authors = ["Dongdong Zhou <dz@yay.com>"]
edition = "2018"

[dependencies]
tracing = "0.1.40"
consistent_hash_ring = "0.8.0"
crossbeam = "0.8.0"
itertools = "0.9.0"
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
lazy_static = "1.4.0"
scopeguard = "1.1.0"
futures = "0.3.8"
redis = { version = "0.23.0", features = ["tokio-comp"] }
tokio = { version = "1.0.1", features = ["full"]}
anyhow = "1.0.34"
rand = "0.7.3"