[package]
name = "nebula_rpc"
version = "0.1.0"
authors = ["Dongdong Zhou <dz@yay.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["v4", "v5"] }
reqwest = { version = "0.11.12", features = ["json"] }
jsonrpc-lite = "0.5.0"
chrono = "0.4.19"
chrono-tz = "0.5.3"
anyhow = "1.0.30"
strum = "0.20.0"
strum_macros = "0.20.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
itertools = "0.9.0"
nebula_db = {path = "../db"}
sip = {path = "../sip"}
sdp = {path = "../sdp"}
codec = { path = "../codec"}
nebula_redis = {path = "../redis"}
tokio = { version = "1.0.1", features = ["full"]}