[package]
name = "nebula_switchboard"
version = "0.1.0"
authors = ["Dongdong Zhou <dz@yay.com>"]
edition = "2018"

[dependencies]
phonenumber.workspace = true
jsonrpc-lite = "0.5.0"
urlencoding = "2.1.0"
base64 = "0.13.0"
axum = "0.6.20"
tower-http = { version = "0.3", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
bigdecimal = { version = "0.1.2", features = ["serde"] }
sha2 = "0.9.8"
hmac = "0.11.0"
jwt = "0.15.0"
uuid = "0.8.2"
regex = "1.4.3"
reqwest = "0.11.0"
fern = "0.6.0"
async-recursion = "0.3.1"
lazy_static = "1.4.0"
toml = "0.5.7"
anyhow = "1.0.34"
thiserror = "1.0.22"
strum = "0.20.0"
strum_macros = "0.20.1"
serde = { version = "1.0.133", features = ["derive"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tokio = { version = "1.0.1", features = ["full"] }
serde_json = "1.0.74"
itertools = "0.9.0"
futures = "0.3"
chrono = "0.4.19"
chrono-tz = "0.5.3"
rand = "0.8.5"
nebula_rpc = {path = "../rpc"}
nebula_db = {path = "../db"}
nebula_redis = {path = "../redis"}
nebula_utils = {path = "../utils"}
sip = {path = "../sip"}
sdp = {path = "../sdp"}
codec = { path = "../codec"}
yaypi = {path = "../yaypi"}
storagev1 = {path = "../googleapis/storagev1"}
