[package]
name = "yaypi"
version = "0.1.0"
authors = ["Dongdong Zhou <dz@yay.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
tokio = { version = "1.0.1", features = ["full"] }
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"