[package]
name = "storagev1"
version = "0.1.0"
authors = ["Dongdong Zhou <dz@yay.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
serde_json = "1.0.59"
bytes = "1.0.0"
tonic = "0.4.0"
prost = "0.7.0"
arc-swap = "1.0.0"
yup-oauth2 = "5.0.1"
tokio = { version = "1.0.1", features = ["full"]}
thiserror = "1.0.22"
anyhow = "1.0.34"
prost-types = "0.7.0"
google_iam = {path = "../iam"}
google_iam_iam_policy = {path = "../iam-policy"}
google_type = { path = "../type" }