[package]
name = "texttospeechv1"
version = "0.1.0"
authors = ["Dongdong Zhou <dz@yay.com>"]
edition = "2018"

[dependencies]
tonic ={ version = "0.4.0", features = ["tls", "tls-roots"]}
prost = "0.7.0"
arc-swap = "1.0.0"
yup-oauth2 = "5.0.1"
tokio = { version = "1.0.1", features = ["full"]}
tokio-rustls = "0.22.0"
anyhow = "1.0.34"